adjust test to oid in src: IndexerTest